# entity_generator.py
@@ -1,14 +1,18 @@
 import random
 import names
-import itertools
+import uifaces
 from random_words import LoremIpsum, RandomEmails, RandomNicknames, RandomWords
 
 from faker import Faker
+
 fake = Faker()
 
 rw = RandomWords()
 rn = RandomNicknames()
 re = RandomEmails()
+
+_employeeId = 1
+_callId = 1
 
 bigModel = False
 
@@ -20,11 +24,22 @@ def countStatisticInFrame(callTimeline, keyName, expectedValue):
         1 if callFrame[keyName] == expectedValue else 0 for callFrame in callTimeline
     )
 
+def generateCallId():
+    global _callId
+    newCallId = _callId
+    _callId = _callId + 1
+    return newCallId
+
+def generateEmployeeId():
+    global _employeeId
+    newEmployeeId = _employeeId
+    _employeeId = _employeeId + 1
+    return newEmployeeId
+
 def aggregateStatistic(statisticsArray, statistic):
     return sum(
         currentStatistics[statistic] for currentStatistics in statisticsArray
     )
-
 
 def aggregateStatistics(statisticsArray):
     return {
@@ -47,7 +62,6 @@ def aggregateStatistics(statisticsArray):
         "kindnessKind": aggregateStatistic(statisticsArray, "kindnessKind"),
         "kindnessUnkind": aggregateStatistic(statisticsArray, "kindnessUnkind"),
         "kindnessNeutral": aggregateStatistic(statisticsArray, "kindnessNeutral"),
-
     }
 
 def calculateStatistics(callTimeline):
@@ -72,6 +86,47 @@ def calculateStatistics(callTimeline):
         "kindnessKind": countStatisticInFrame(callTimeline, "kindness", "kind"),
         "kindnessUnkind": countStatisticInFrame(callTimeline, "kindness", "unkind"),
         "kindnessNeutral": countStatisticInFrame(callTimeline, "satisfaction", "neutral"),
+    }
+
+def calculateMetricsByFilter(calls, filterFunc):
+    totalCount = sum([ 1 if filterFunc(call) else 0 for call in calls ])
+    totalLength = sum([ call["length"] if filterFunc(call) else 0 for call in calls ])
+
+    return float(totalCount), float(totalLength)
+
+def calculateMetrics(calls):
+    allCallCount, allCallLength = calculateMetricsByFilter(calls, lambda call: True)
+    businessCallCount, businessCallLength = calculateMetricsByFilter(calls, lambda call: call["analysis"]["type"] == "business")
+    privateCallCount, privateCallLength = calculateMetricsByFilter(calls, lambda call: call["analysis"]["type"] == "private")
+    informationQueryCallCount, informationQueryCallLength = \
+        calculateMetricsByFilter(calls, lambda call: call["analysis"]["conversationTopic_informationQuery"])
+    pickupCollectionCallCount, pickupCollectionCallLength = \
+        calculateMetricsByFilter(calls, lambda call: call["analysis"]["conversationTopic_pickupCollection"])
+    deliveryCallCount, deliveryCallLength = \
+        calculateMetricsByFilter(calls, lambda call: call["analysis"]["conversationTopic_delivery"])
+
+    goodCalls = sum(1 if call["analysis"]["emotion"] in ("neutral", "happy", "calm") else 0 for call in calls)
+    badCalls = sum(1 if call["analysis"]["emotion"] in ("angry", "sad", "fearful") else 0 for call in calls)
+    score = goodCalls - badCalls
+
+    return {
+        "score": score,
+        "callPercentage": {
+            "all": int(allCallCount / allCallCount * 100.0),
+            "business": int(businessCallCount / allCallCount * 100.0),
+            "private": int(privateCallCount / allCallCount * 100.0),
+            "conversationTopic_informationQuery": int(informationQueryCallCount / allCallCount * 100.0),
+            "conversationTopic_pickupCollection": int(pickupCollectionCallCount / allCallCount * 100.0),
+            "conversationTopic_delivery": int(deliveryCallCount / allCallCount * 100.0),
+        },
+        "callAverageLength": {
+            "all": int(allCallLength / allCallCount),
+            "business": int(businessCallLength / businessCallCount),
+            "private": int(privateCallLength / privateCallCount),
+            "conversationTopic_informationQuery": int(informationQueryCallLength / informationQueryCallCount),
+            "conversationTopic_pickupCollection": int(pickupCollectionCallLength / pickupCollectionCallCount),
+            "conversationTopic_delivery": int(deliveryCallLength / deliveryCallCount),
+        },
     }
 
 def generateCallFrame(callFrameProfile):
@@ -101,27 +156,15 @@ def generateCallFrame(callFrameProfile):
       "kindness": random.choice(callFrameProfile['kindnessProfile']),
     }
 
-def generateCallFrameProfile():
+def generateCallProfile(callAnalysis):
 
-    conversationTopic = random.randint(1, 3)
-    isBusiness = random.choice([True, False])
-    goodConversation = random.choice([True, False])
-    if goodConversation:
+    isBusiness = callAnalysis["type"] == "business"
+    goodEmotion = callAnalysis["emotion"] in ("neutral", "happy", "calm")
+    if goodEmotion:
         emotionProfile = random.choice([
             ["calm", "happy", "neutral"],
             ["neutral", "neutral", "neutral", "calm", "happy"],
             ["neutral", "neutral", "neutral", "calm"],
-        ])
-        satisfactionProfile = random.choice([
-            ["satisfied", "neutral", "neutral", "neutral", "neutral"],
-            ["neutral"],
-            ["satisfied", "neutral"],
-        ])
-        kindnessProfile = random.choice([
-            ["kind", "neutral", "neutral", "neutral", "neutral"],
-            ["kind", "neutral"],
-            ["kind"],
-            ["neutral"],
         ])
     else:
         emotionProfile = random.choice([
@@ -131,11 +174,30 @@ def generateCallFrameProfile():
             ["fearful", "neutral", "neutral", "neutral",  ],
             ["angry", "neutral", ],
         ])
+
+    goodSatisfaction = callAnalysis["satisfaction"] in ("neutral", "satisfied")
+    if goodSatisfaction:
+        satisfactionProfile = random.choice([
+            ["satisfied", "neutral", "neutral", "neutral", "neutral"],
+            ["neutral"],
+            ["satisfied", "neutral"],
+        ])
+    else:
         satisfactionProfile = random.choice([
             ["unsatisfied", "neutral", "neutral", "neutral", "neutral"],
             ["unsatisfied"],
             ["unsatisfied", "neutral"],
         ])
+
+    goodKindness = callAnalysis["kindness"] in ("neutral", "kind")
+    if goodKindness:
+        kindnessProfile = random.choice([
+            ["kind", "neutral", "neutral", "neutral", "neutral"],
+            ["kind", "neutral"],
+            ["kind"],
+            ["neutral"],
+        ])
+    else:
         kindnessProfile = random.choice([
             ["unkind", "neutral", "neutral", "neutral", "neutral"],
             ["unkind", "neutral"],
@@ -149,9 +211,9 @@ def generateCallFrameProfile():
           ["female", "male"],
       ]),
       "emotionProfile": emotionProfile,
-      "conversationTopic_informationQuery": conversationTopic == 1,
-      "conversationTopic_pickupCollection": conversationTopic == 2,
-      "conversationTopic_delivery": conversationTopic == 3,
+      "conversationTopic_informationQuery": callAnalysis["conversationTopic_informationQuery"],
+      "conversationTopic_pickupCollection": callAnalysis["conversationTopic_pickupCollection"],
+      "conversationTopic_delivery": callAnalysis["conversationTopic_delivery"],
       "typeProfile": "business" if isBusiness else "private",
       "satisfactionProfile": satisfactionProfile,
       "kindnessProfile": kindnessProfile
@@ -160,20 +222,35 @@ def generateCallFrameProfile():
 def generateCall():
 
     callLength = random.randint(60, 600)
-    callFrameProfile = generateCallFrameProfile()
+    callAnalysis = {
+      "gender": random.choice(["male", "female"]),
+      "emotion": random.choice(["calm", "happy", "sad", "angry", "fearful", "neutral"]),
+      "conversationTopic_informationQuery": random.choice([True, False]),
+      "conversationTopic_pickupCollection": random.choice([True, False]),
+      "conversationTopic_delivery": random.choice([True, False]),
+      "type": random.choice(["business", "private"]),
+      "satisfaction": random.choice(["satisfied", "unsatisfied", "neutral"]),
+      "kindness": random.choice(["kind", "unkind", "neutral"]),
+    }
+    callProfile = generateCallProfile(callAnalysis)
+
     callTimeline = [
-        generateCallFrame(callFrameProfile)
+        generateCallFrame(callProfile)
         for _ in range(int(callLength / 10))
     ]
     callStatistics = calculateStatistics(callTimeline)
     return {
-        "datetime": fake.date_between(start_date='-1y', end_date='-1d'),
+        "id": generateCallId(),
+        "datetime": fake.date_time_between(start_date='-1y', end_date='-1d'),
         "length": callLength,
         "timeline": callTimeline,
+        "analysis": callAnalysis,
         "statistics": callStatistics
     }
 
 def generateEmployee():
+
+    isMale = random.choice([True, False])
     if bigModel:
         callCount = random.randint(1000, 5000)
     else:
@@ -181,12 +258,16 @@ def generateEmployee():
     calls = [ generateCall() for _ in range(callCount) ]
     aggregatedStatistics = aggregateStatistics([ call['statistics'] for call in calls ])
     lengthAverage = int(mean([ call['length'] for call in calls ]))
+    pic = random.choice(uifaces.male)['photo'] if isMale else random.choice(uifaces.female)['photo']
 
     return {
-        "callIds": list(range(1, callCount+1)),
+        "id": generateEmployeeId(),
+        "callIds": [ call['id'] for call in calls ],
         "calls": calls,
         "name": names.get_full_name(),
+        "picture": pic,
         "lengthAverage": lengthAverage,
+        "metrics": calculateMetrics(calls),
         "statistics": aggregatedStatistics,
     }
 
@@ -194,7 +275,7 @@ def generateCompany():
     if bigModel:
         employeeCount = random.randint(20, 60)
     else:
-        employeeCount = random.randint(4, 8)
+        employeeCount = random.randint(10, 20)
 
     employees = [ generateEmployee() for _ in range(employeeCount) ]
     calls = []
@@ -203,9 +284,17 @@ def generateCompany():
     aggregatedStatistics = aggregateStatistics([ call['statistics'] for call in calls ])
     lengthAverage = int(mean([ call['length'] for call in calls ]))
 
+    employeesByScore = sorted(employees, key=lambda employee: employee['metrics']["score"])
+    topFiveEmployees = employeesByScore[0:5]
+    bottomFiveEmployees = employeesByScore[-5:]
+
     return {
-        'employeeIds': list(range(1, employeeCount+1)),
+        'topFiveEmployeeIds': [ employee['id'] for employee in topFiveEmployees ],
+        'bottomFiveEmployeeIds': [employee['id'] for employee in bottomFiveEmployees],
+        'employeeIds': [ employee['id'] for employee in employees ],
         'employees': employees,
+        'calls': calls,
         'lengthAverage': lengthAverage,
+        "metrics": calculateMetrics(calls),
         'statistics': aggregatedStatistics
     }
